cons g edit :zap:

--- a/Views/consulta/Detalles.cshtml
+++ b/Views/consulta/Detalles.cshtml
@@ -20,11 +20,11 @@
     </div>
 
     <div class="form-group">
-      <button class="btn btn-danger" id="agregarEx">Agregar</button> 
+      <button class="btn btn-primary" id="agregarEx">Agregar</button> 
     </div>
     <!---table --->
-    <table class="table">
-      <thead thead="">
+    <table class="table table-sm">
+      <thead  class="thead">
           <tr>
             <th>Nombre del examen</th>
           </tr>
@@ -50,11 +50,11 @@
         </div>
   
         <div class="form-group">
-          <button class="btn btn-danger" id="agregarDiag">Agregar</button> 
+          <button class="btn btn-primary" id="agregarDiag">Agregar</button> 
         </div>
         <!---table --->
-        <table class="table">
-          <thead thead="">
+        <table class="table table-sm">
+          <thead class="thead">
               <tr>
                 <th>Enfermedad</th>
               </tr>
