--- a/Views/consulta/Detalles.cshtml
+++ b/Views/consulta/Detalles.cshtml
@@ -73,7 +73,73 @@
 
 <div id="rece" class="tabcontent">
   <h3>Receta</h3>
-  <p>Tokyo is the capital of Japan.</p>
+    <div class="form-group">
+        <select id="receta" class="form-control"></select>
+    </div>
+    <div class="btn-group">
+      <button class="btn btn-success" id="selecres">Seleccionar</button> 
+      <button class="btn btn-secondary" id="genew">Generar Nuevo</button> 
+    </div>
+
+ <br> 
+ <br> 
+
+  <div class="form-group">
+      <button data-toggle="modal" data-target="#exampleModalCenter" class="btn btn-primary">Agregar Médicamento</button>
+  </div>
+
+  <table class="table table-sm">
+      <thead  class="thead">
+          <tr>
+            <th>Medicamento</th>
+            <th>Cantidad</th>
+            <th>dosis</th>
+          </tr>
+      </thead>
+      <tbody id="boceta" >
+      </tbody>
+  </table>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Descripción</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="#">
+                <div class="form-group">
+                    <label class="control-label">Medicamento</label>
+                    <input type="text"  class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label">Cantidad</label>
+                    <input type="number" class="form-control">
+                </div>
+                
+                <div class="form-group">
+                    <label class="control-label">Dosis</label>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" class="btn btn-danger" value="Agregar">
+                </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Agregar</button>
+            </div>
+            </div>
+        </div>
+        </div>
+
 </div>
 
 <div id="sig" class="tabcontent">
