--- a/Views/consulta/Detalles.cshtml
+++ b/Views/consulta/Detalles.cshtml
@@ -147,7 +147,65 @@
 
 <div id="sig" class="tabcontent">
   <h3>Signos Vitales</h3>
-  <p>Tokyo is the capital of Japan.</p>
+
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form >
+            <div  class="text-danger"></div>
+            <input type="hidden" />
+            <div class="form-group">
+                <label  class="control-label">Estatura</label>
+                <input  class="form-control" />
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Peso</label>
+                <input  class="form-control" />
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Temp</label>
+                <input  class="form-control" />
+
+            </div>
+            <div class="form-group">
+                <label class="control-label">Pulso</label>
+                <input class="form-control" />
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Presion Arterial</label>
+                <input  class="form-control" />
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Frecuencia Cardiaca</label>
+                <input  class="form-control" />
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Frecuencia Respiratoria</label>
+                <input  class="form-control" />
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Enfermera</label>
+                <select class="form-control" ></select>
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Fecha</label>
+                <input  class="form-control" />
+            </div>
+            <div class="form-group">
+                <label class="control-label">IdConsulta</label>
+                <select class="form-control"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
+
+
 </div>
 
 <script src="~/js/tabs.js" asp-append-version="true"></script>
