--- a/Views/consulta/Detalles.cshtml
+++ b/Views/consulta/Detalles.cshtml
@@ -8,13 +8,13 @@
   <button class="col tablinks" onclick="openCity(event, 'lab')"><i class="fas fa-vials"></i> Ordenes De laboratorio</button>
   <button class="col tablinks" onclick="openCity(event, 'diag')"><i class="fas fa-stethoscope"></i> Diagnostico</button>
   <button class="col tablinks" onclick="openCity(event, 'rece')"><i class="fas fa-file-medical-alt"></i> Recetas</button>
-  <button class="col tablinks" onclick="openCity(event, 'sig')"><i class="fas fa-weight"></i> Signos Vitales</button>
+  <button id="btn-signos" class="col tablinks" onclick="openCity(event, 'sig')"><i class="fas fa-weight"></i> Signos Vitales</button>
 </div>
 
 
 <div id="lab" class="tabcontent">
-<h4>Agregar Nuevo Examen</h4>
-
+<h4>Examenes de laboratorio</h4>
+<hr />
     <div class="form-group">
         <input required placeholder="Nombre del examen" id="dire" class="form-control" />
     </div>
@@ -45,6 +45,7 @@
     <div class="col">
       <h3>Diagnostico</h3>
 
+<hr />
         <div class="form-group">
             <select id="cie" class="form-control"></select>
         </div>
@@ -73,6 +74,7 @@
 
 <div id="rece" class="tabcontent">
   <h3>Receta</h3>
+<hr />
     <div class="form-group">
         <select id="receta" class="form-control"></select>
     </div>
@@ -146,7 +148,9 @@
 </div>
 
 <div id="sig" class="tabcontent">
-  <h3>Signos Vitales</h3>
+  <h3>Signos Vitales:
+    <strong id="idmedicamento"></strong>
+  </h3>
 
 <hr />
 <div class="row">
@@ -156,47 +160,46 @@
             <input type="hidden" />
             <div class="form-group">
                 <label  class="control-label">Estatura</label>
-                <input  class="form-control" />
+                <input  id="est" placeholder="Centimetros." type="number" class="form-control" />
             </div>
             <div class="form-group">
                 <label  class="control-label">Peso</label>
-                <input  class="form-control" />
+                <input  id="pes" placeholder="Kgs." type="number" class="form-control" />
             </div>
             <div class="form-group">
-                <label  class="control-label">Temp</label>
-                <input  class="form-control" />
+                <label  class="control-label">Temperatura</label>
+                <input  id="temp" placeholder="°C"  type="number" class="form-control" />
 
             </div>
             <div class="form-group">
                 <label class="control-label">Pulso</label>
-                <input class="form-control" />
+                <input  id="pul" type="number" class="form-control" />
             </div>
             <div class="form-group">
                 <label  class="control-label">Presion Arterial</label>
-                <input  class="form-control" />
+                <input  id="art" type="number" class="form-control" />
             </div>
             <div class="form-group">
                 <label  class="control-label">Frecuencia Cardiaca</label>
-                <input  class="form-control" />
+                <input  id="card" type="number" class="form-control" />
             </div>
             <div class="form-group">
                 <label  class="control-label">Frecuencia Respiratoria</label>
-                <input  class="form-control" />
+                <input  id="respi" type="number" class="form-control" />
             </div>
+            <!--
             <div class="form-group">
                 <label  class="control-label">Enfermera</label>
-                <select class="form-control" ></select>
+                <select id="enf" class="form-control" ></select>
             </div>
             <div class="form-group">
                 <label  class="control-label">Fecha</label>
-                <input  class="form-control" />
+                <input id="medfech" type="date" class="form-control" />
             </div>
+            -->
+            
             <div class="form-group">
-                <label class="control-label">IdConsulta</label>
-                <select class="form-control"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input id="actuSig" type="submit" value="Actualizar" class="btn btn-primary" />
             </div>
         </form>
     </div>
