--- a/wwwroot/css/calendar.css
+++ b/wwwroot/css/calendar.css
@@ -2,7 +2,7 @@
     padding: 0; 
     font-size: 1rem;
     width: 100%;
-    height: 400px;
+    height: 100%;
     overflow: auto;
     transform: translateZ(0deg);
     color:white;
