--- a/wwwroot/css/calendar.css
+++ b/wwwroot/css/calendar.css
@@ -73,7 +73,7 @@
 
 .tempust .event {
     display: none;
-    background-color: #666666;
+    background-color: white;
     color: #ffffff;
     box-sizing: border-box;
     padding: 0.5rem;
