join api and no detallefac

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
              //dateN : $("<div>Event on today as well!</div>"),
             //"2019/10/11": $("<div>Event on today as well!</div>"),
           })
-          primera[dateN] = '<div><a href="/Home/Index">Hoy es 15<a></div>'
+          primera[dateN] = '<div><a href="/Home/Index">Hoy es '+dd+'<a></div>'
 
           var obje = ({
           "2019/10/12": $("<div>Event on today!</div>"),
