--- a/Views/consulta/Detalles.cshtml
+++ b/Views/consulta/Detalles.cshtml
@@ -2,6 +2,21 @@
 
 
 <h2>Detalle Consulta: <strong name="@ViewData["ident"]" id="idcon">@ViewData["ident"]</strong></h2>
+<!---table --->
+    <table class="table table-sm">
+      <thead  class="thead">
+          <tr>
+            <th>Paciente</th>
+            <th>Expediente</th>
+            <th>Asunto</th>
+            <th>Monto</th>
+          </tr>
+      </thead>
+      <tbody id="beta" >
+      </tbody>
+    </table>
+
+
 <hr>
 
 <div class="tab row">
