--- a/Views/Factura/Create.cshtml
+++ b/Views/Factura/Create.cshtml
@@ -26,10 +26,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdExpediente" class="control-label"></label>
+                <!--
                 <select asp-for="IdExpediente" class ="form-control" asp-items="ViewBag.IdExpediente"></select>
+                -->
+                <select id="secreto" asp-for="IdExpediente" class ="form-control" >
+                </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Facturar" class="btn btn-primary" />
             </div>
         </form>
     </div>
