--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,19 +59,19 @@
                     <ul class="navbar-nav flex-grow-1">
                         
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="paciente" asp-action="index">Pacientes</a>
+                            <a class="cool-link nav-link text-dark" asp-area="" asp-controller="paciente" asp-action="index">Pacientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cita" asp-action="index">Agenda</a>
+                            <a class="cool-link nav-link text-dark" asp-area="" asp-controller="Cita" asp-action="index">Agenda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="consulta" asp-action="index">Consultas</a>
+                            <a class="cool-link nav-link text-dark" asp-area="" asp-controller="consulta" asp-action="index">Consultas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Factura" asp-action="index">Caja</a>
+                            <a class="cool-link nav-link text-dark" asp-area="" asp-controller="Factura" asp-action="index">Caja</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Mantenimiento" asp-action="index">Mantenimientos</a>
+                            <a class="cool-link nav-link text-dark" asp-area="" asp-controller="Mantenimiento" asp-action="index">Mantenimientos</a>
                         </li>
                         <!--
                         <li class="nav-item">
