--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,6 +73,9 @@
                         <li class="nav-item">
                             <a class="cool-link nav-link text-dark" asp-area="" asp-controller="Mantenimiento" asp-action="index">Mantenimientos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="cool-link nav-link text-dark" asp-area="" asp-controller="Reportes" asp-action="index">Reportes</a>
+                        </li>
                         <!--
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Reportes</a>
