--- a/Views/Reportes/index.cshtml
+++ b/Views/Reportes/index.cshtml
@@ -7,12 +7,18 @@
 
     <div class="form-group">
     <label class="control-label">Paciente</label>
-    <input type="number" class="form-control" name="id_paciente">
+
+    <select id="paciente" class="form-control" name="id_paciente">
+    
+    </select>
+
     </div>
 
     <div class="form-group">
     <label class="control-label">Expediente</label>
-    <input type="number" class="form-control" name="id_exp">
+    <select id="expSec" class="form-control" name="id_exp">
+
+    </select>
     </div>
 
     <div class="form-group">
@@ -39,3 +45,5 @@
     </div>
 
 </form>
+
+<script src="~/js/report.js"></script>
