--- a/Views/Reportes/index.cshtml
+++ b/Views/Reportes/index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Reportes";
 }
 
-<h1>Repoerte de expediente</h1>
+<h1>Reporte de expediente</h1>
 <form action="http://localhost/reportes/pdf.php" method="GET">
 
     <div class="form-group">
@@ -27,6 +27,8 @@
 
 </form>
 
+<hr/>
+
 <h1>Reporte de Ganancia</h1>
 <form action="http://localhost/reportes/ganar.php" method="GET">
 
@@ -46,4 +48,5 @@
 
 </form>
 
+<hr/>
 <script src="~/js/report.js"></script>
