--- a/Views/Factura/Create.cshtml
+++ b/Views/Factura/Create.cshtml
@@ -25,7 +25,7 @@
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdExpediente" class="control-label"></label>
+                <label asp-for="IdExpediente" class="control-label">Paciente/Expediente</label>
                 <!--
                 <select asp-for="IdExpediente" class ="form-control" asp-items="ViewBag.IdExpediente"></select>
                 -->
