responsive validation :pencil:

--- a/Views/consulta/Index.cshtml
+++ b/Views/consulta/Index.cshtml
@@ -70,9 +70,9 @@
                 @Html.DisplayFor(modelItem => item.MontoCaja)
             </td>
             <td class="btn-group flex-wrap">
-                <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.IdConsulta">Edit</a>
-                <a class="btn btn-warning" asp-action="Detalles" asp-route-id="@item.IdConsulta">Detalles Consulta</a>
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdConsulta">Delete</a>
+                <a class="   btn btn-info btn-block regular-link " asp-action="Edit" asp-route-id="@item.IdConsulta">Edit</a>
+                <a class="    btn btn-info btn-block regular-link btn-warning  " asp-action="Detalles" asp-route-id="@item.IdConsulta">Detalles Consulta</a>
+                <a class="    btn btn-info btn-block regular-link btn-danger  " asp-action="Delete" asp-route-id="@item.IdConsulta">Delete</a>
             </td>
         </tr>
 }
