--- a/Views/Paciente/Index.cshtml
+++ b/Views/Paciente/Index.cshtml
@@ -99,9 +99,9 @@
             </td>
             
             <td>
-                <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.IdPaciente">Edit</a>
-                <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.IdPaciente">Details</a>
-                <a  class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdPaciente">Delete</a>
+                <a class=" btn btn-info btn-block regular-link " asp-action="Edit" asp-route-id="@item.IdPaciente">Edit</a>
+                <a class="  btn btn-info btn-block regular-link btn-warning " asp-action="Details" asp-route-id="@item.IdPaciente">Details</a>
+                <a  class="btn btn-info btn-block regular-link btn-danger" asp-action="Delete" asp-route-id="@item.IdPaciente">Delete</a>
             </td>
         </tr>
 }
