--- a/Views/consulta/Edit.cshtml
+++ b/Views/consulta/Edit.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="MontoCaja" class="control-label"></label>
-                <input asp-for="MontoCaja" class="form-control" />
+                <input type="number" min="1" pattern="^[0-9]+" asp-for="MontoCaja" class="form-control" />
                 <span asp-validation-for="MontoCaja" class="text-danger"></span>
             </div>
             <div class="form-group">
