--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -119,7 +119,23 @@ body > header > nav > div > button > i{
   padding: 0;
   float: right;
   display: block;
+    background:
+       linear-gradient(
+         to bottom, var(--mainColor) 0%,
+         var(--mainColor) 100%
+       );
+      background-position: 0 100%;
+      background-repeat: repeat-x;
+      background-size: 4px 4px;
+    color: #000;
+    text-decoration: none;
+    transition: background-size .2s;
 }
+
+.cerrar:hover {
+  background-size: 4px 50px;
+}
+
 
 .btn-limpio {
   white-space: normal !important;
