--- a/Views/Reportes/index.cshtml
+++ b/Views/Reportes/index.cshtml
@@ -49,4 +49,45 @@
 </form>
 
 <hr/>
+
+<h1>Reporte de Citas</h1>
+<form action="http://localhost/reportes/citas.php" method="GET">
+
+    <div class="form-group">
+    <label class="control-label">Fecha de inicio</label>
+    <input type="date" class="form-control" name="cita_inicial">
+    </div>
+
+    <div class="form-group">
+    <label class="control-label">Fecha de final</label>
+    <input type="date" class="form-control" name="cita_final">
+    </div>
+
+    <div class="form-group">
+    <input type="submit" class="btn btn-dark"value="Generar Reporte">
+    </div>
+
+</form>
+<hr/>
+
+<h1>Reporte de Consultas</h1>
+<form action="http://localhost/reportes/ulti.php" method="GET">
+
+    <div class="form-group">
+    <label class="control-label">Fecha de inicio</label>
+    <input type="date" class="form-control" name="init">
+    </div>
+
+    <div class="form-group">
+    <label class="control-label">Fecha de final</label>
+    <input type="date" class="form-control" name="end">
+    </div>
+
+    <div class="form-group">
+    <input type="submit" class="btn btn-dark"value="Generar Reporte">
+    </div>
+
+</form>
+<hr/>
+
 <script src="~/js/report.js"></script>
