--- a/Views/Factura/Create.cshtml
+++ b/Views/Factura/Create.cshtml
@@ -24,6 +24,12 @@
                 <input type="date" asp-for="Fecha" class="form-control" />
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label class="control-label">Nit</label>
+                <input type="text" name="nit" class="form-control" />
+            </div>
+
             <div class="form-group">
                 <label asp-for="IdExpediente" class="control-label">Paciente/Expediente</label>
                 <!--
