last edits :arrow_up:

--- a/Views/Reportes/index.cshtml
+++ b/Views/Reportes/index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <h1>Reporte de expediente</h1>
-<form action="http://localhost/reportes/pdf.php" method="GET">
+<form action="https://clinreportes.azurewebsites.net/pdf.php" method="GET">
 
     <div class="form-group">
     <label class="control-label">Paciente</label>
@@ -30,7 +30,7 @@
 <hr/>
 
 <h1>Reporte de Ganancia</h1>
-<form action="http://localhost/reportes/ganar.php" method="GET">
+<form action="https://clinreportes.azurewebsites.net/ganar.php" method="GET">
 
     <div class="form-group">
     <label class="control-label">Fecha de inicio</label>
@@ -51,7 +51,7 @@
 <hr/>
 
 <h1>Reporte de Citas</h1>
-<form action="http://localhost/reportes/citas.php" method="GET">
+<form action="https://clinreportes.azurewebsites.net/citas.php" method="GET">
 
     <div class="form-group">
     <label class="control-label">Fecha de inicio</label>
@@ -71,7 +71,7 @@
 <hr/>
 
 <h1>Reporte de Consultas</h1>
-<form action="http://localhost/reportes/ulti.php" method="GET">
+<form action="https://clinreportes.azurewebsites.net/ulti.php" method="GET">
 
     <div class="form-group">
     <label class="control-label">Fecha de inicio</label>
