--- a/Views/consulta/Index.cshtml
+++ b/Views/consulta/Index.cshtml
@@ -17,7 +17,7 @@
     <a class="btn btn-primary" asp-action="Create">Crear Nueva</a>
 </p>
 <hr style="width:100%">
-<table class="table table-sm table-condensed">
+<table class="table table-sm table-responsive">
     <thead class="thead-dark">
         <tr>
             <th>
