--- a/Views/Cita/Details.cshtml
+++ b/Views/Cita/Details.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.Cita
 
 @{
-    ViewData["Title"] = "Cita index";
+    ViewData["Title"] = "Cita Detalles";
 
 }
 <!DOCTYPE html>
