--- a/Views/DescripcionReceta/Delete.cshtml
+++ b/Views/DescripcionReceta/Delete.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.DesReceta
 
 @{
-    ViewData["Title"] = "Detalle Receta";
+    ViewData["Title"] = "Eliminar Receta";
 }
 
 <!DOCTYPE html>
