--- a/Views/Factura/Create.cshtml
+++ b/Views/Factura/Create.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.Factura
 
 @{
-    ViewData["Title"] = "Factura";
+    ViewData["Title"] = "Factura Crear";
 }
 
 <!DOCTYPE html>
