--- a/Views/OrdenLab/Edit.cshtml
+++ b/Views/OrdenLab/Edit.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.OrdenLab
 
 @{
-    ViewData["Title"] = "Ordenes de Laboratorio";
+    ViewData["Title"] = "Ordenes de Laboratorio Editar";
 
 }
 <!DOCTYPE html>
