--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -92,6 +92,7 @@
     </footer>
 
      <script src="~/js/site.js" asp-append-version="true"></script>
+     <script src="~/js/post.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
