--- a/Views/consulta/Delete.cshtml
+++ b/Views/consulta/Delete.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.Consulta
 
 @{
-    ViewData["Title"] = "Consulta";
+    ViewData["Title"] = "Consulta Eliminar";
 }
 
 <!DOCTYPE html>
