--- a/Views/consulta/Detalles.cshtml
+++ b/Views/consulta/Detalles.cshtml
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="~/css/tab.css"> 
 
+<title> Detalles Cita</title>
 
 <h2>Detalle Consulta: <strong name="@ViewData["ident"]" id="idcon">@ViewData["ident"]</strong></h2>
 <!---table --->
