--- a/Views/doctor/Create.cshtml
+++ b/Views/doctor/Create.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.Doctor
 
 @{
-    ViewData["Title"] = "Doctor";
+    ViewData["Title"] = "Crear Doctor";
 }
 
 <!DOCTYPE html>
