--- a/Views/doctor/Details.cshtml
+++ b/Views/doctor/Details.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.Doctor
 
 @{
-    ViewData["Title"] = "Doctor";
+        ViewData["Title"] = "Doctor Detalles";
 }
 
 <!DOCTYPE html>
