--- a/Views/AdminLogin/Login.cshtml
+++ b/Views/AdminLogin/Login.cshtml
@@ -6,6 +6,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="~/css/site.css" />
+        <title> Logiar </title>
         <style>
 
 .login-page {
