--- a/Views/Diagnostico/Edit.cshtml
+++ b/Views/Diagnostico/Edit.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.Diagnostico
 
 @{
-    ViewData["Title"] = "Diagnostico";
+    ViewData["Title"] = "Eliminar Diagnostico";
 }
 
 
