--- a/Views/doctor/Delete.cshtml
+++ b/Views/doctor/Delete.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.Doctor
 
 @{
-    ViewData["Title"] = "Doctor";
+    ViewData["Title"] = "Eliminar Doctor";
 }
 
 <!DOCTYPE html>
