--- a/Views/enfermera/Delete.cshtml
+++ b/Views/enfermera/Delete.cshtml
@@ -1,7 +1,7 @@
 @model Clinica.Models.Enfermera
 
 @{
-    ViewData["Title"] = "Enfermera";
+    ViewData["Title"] = "Enfermera Eliminar";
 }
 
 <!DOCTYPE html>
